PDF Pólizas: suma asegurada agregada para coberturas. Arreglado bug de nombre de conductores.

--- a/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
@@ -179,7 +179,7 @@
     <td colspan="3">COBERTURA D - OTROS RIESGOS</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td colspan="1" style="text-align: center;"></td>
+    <td colspan="1" style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.otros_danios }}</td>
     <td style="text-align: center;">{{ solicitud.cotizacion.prima_otrosDanios }}</td>
   </tr>
@@ -187,7 +187,7 @@
     <td colspan="3">COBERTURA E - COLISIÓN O VUELCO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td colspan="1" style="text-align: center;"></td>
+    <td colspan="1" style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.colision_vuelco }}</td>
     <td style="text-align: center;">{{ solicitud.cotizacion.prima_colisionVuelco }}</td>
   </tr>
@@ -195,7 +195,7 @@
     <td colspan="3">COBERTURA F - INCENDIO Y RAYO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td style="text-align: center;"></td>
+    <td style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.incendio_rayo }}</td>
     <td colspan="1" style="text-align: center;">.00</td>
   </tr>
@@ -203,7 +203,7 @@
     <td colspan="3">COBERTURA G - ROBO O HURTO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td style="text-align: center;"></td>
+    <td style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.robo_hurto }}</td>
     <td colspan="1" style="text-align: center;">.00</td>
   </tr>
@@ -391,7 +391,7 @@
     <td colspan="3">COBERTURA D - OTROS RIESGOS</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td colspan="1" style="text-align: center;"></td>
+    <td colspan="1" style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.otros_danios }}</td>
     <td style="text-align: center;">{{ solicitud.cotizacion.prima_otrosDanios }}</td>
   </tr>
@@ -399,7 +399,7 @@
     <td colspan="3">COBERTURA E - COLISIÓN O VUELCO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td colspan="1" style="text-align: center;"></td>
+    <td colspan="1" style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.colision_vuelco }}</td>
     <td style="text-align: center;">{{ solicitud.cotizacion.prima_colisionVuelco }}</td>
   </tr>
@@ -407,7 +407,7 @@
     <td colspan="3">COBERTURA F - INCENDIO Y RAYO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td style="text-align: center;"></td>
+    <td style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.incendio_rayo }}</td>
     <td colspan="1" style="text-align: center;">.00</td>
   </tr>
@@ -415,7 +415,7 @@
     <td colspan="3">COBERTURA G - ROBO O HURTO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td style="text-align: center;"></td>
+    <td style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.robo_hurto }}</td>
     <td colspan="1" style="text-align: center;">.00</td>
   </tr>
