--- a/cotizador_acerta/templates/polizas/emision_todas_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_todas_pdf.html
@@ -181,7 +181,7 @@
     <td colspan="3">COBERTURA D - OTROS RIESGOS</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td colspan="1" style="text-align: center;"></td>
+    <td colspan="1" style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.otros_danios }}</td>
     <td style="text-align: center;">{{ solicitud.cotizacion.prima_otrosDanios }}</td>
   </tr>
@@ -189,7 +189,7 @@
     <td colspan="3">COBERTURA E - COLISIÓN O VUELCO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td colspan="1" style="text-align: center;"></td>
+    <td colspan="1" style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.colision_vuelco }}</td>
     <td style="text-align: center;">{{ solicitud.cotizacion.prima_colisionVuelco }}</td>
   </tr>
@@ -197,7 +197,7 @@
     <td colspan="3">COBERTURA F - INCENDIO Y RAYO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td style="text-align: center;"></td>
+    <td style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.incendio_rayo }}</td>
     <td colspan="1" style="text-align: center;">.00</td>
   </tr>
@@ -205,7 +205,7 @@
     <td colspan="3">COBERTURA G - ROBO O HURTO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td style="text-align: center;"></td>
+    <td style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.robo_hurto }}</td>
     <td colspan="1" style="text-align: center;">.00</td>
   </tr>
@@ -394,7 +394,7 @@
     <td colspan="3">COBERTURA D - OTROS RIESGOS</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td colspan="1" style="text-align: center;"></td>
+    <td colspan="1" style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.otros_danios }}</td>
     <td style="text-align: center;">{{ solicitud.cotizacion.prima_otrosDanios }}</td>
   </tr>
@@ -402,7 +402,7 @@
     <td colspan="3">COBERTURA E - COLISIÓN O VUELCO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td colspan="1" style="text-align: center;"></td>
+    <td colspan="1" style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.colision_vuelco }}</td>
     <td style="text-align: center;">{{ solicitud.cotizacion.prima_colisionVuelco }}</td>
   </tr>
@@ -410,7 +410,7 @@
     <td colspan="3">COBERTURA F - INCENDIO Y RAYO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td style="text-align: center;"></td>
+    <td style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.incendio_rayo }}</td>
     <td colspan="1" style="text-align: center;">.00</td>
   </tr>
@@ -418,7 +418,7 @@
     <td colspan="3">COBERTURA G - ROBO O HURTO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td style="text-align: center;"></td>
+    <td style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.robo_hurto }}</td>
     <td colspan="1" style="text-align: center;">.00</td>
   </tr>
@@ -606,7 +606,7 @@
     <td colspan="3">COBERTURA D - OTROS RIESGOS</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td colspan="1" style="text-align: center;"></td>
+    <td colspan="1" style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.otros_danios }}</td>
     <td style="text-align: center;">{{ solicitud.cotizacion.prima_otrosDanios }}</td>
   </tr>
@@ -614,7 +614,7 @@
     <td colspan="3">COBERTURA E - COLISIÓN O VUELCO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td colspan="1" style="text-align: center;"></td>
+    <td colspan="1" style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.colision_vuelco }}</td>
     <td style="text-align: center;">{{ solicitud.cotizacion.prima_colisionVuelco }}</td>
   </tr>
@@ -622,7 +622,7 @@
     <td colspan="3">COBERTURA F - INCENDIO Y RAYO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td style="text-align: center;"></td>
+    <td style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.incendio_rayo }}</td>
     <td colspan="1" style="text-align: center;">.00</td>
   </tr>
@@ -630,7 +630,7 @@
     <td colspan="3">COBERTURA G - ROBO O HURTO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td style="text-align: center;"></td>
+    <td style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.robo_hurto }}</td>
     <td colspan="1" style="text-align: center;">.00</td>
   </tr>
