--- a/cotizador_acerta/templates/polizas/emision_intermediario_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_intermediario_pdf.html
@@ -177,7 +177,7 @@
     <td colspan="3">COBERTURA D - OTROS RIESGOS</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td colspan="1" style="text-align: center;"></td>
+    <td colspan="1" style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.otros_danios }}</td>
     <td style="text-align: center;">{{ solicitud.cotizacion.prima_otrosDanios }}</td>
   </tr>
@@ -185,7 +185,7 @@
     <td colspan="3">COBERTURA E - COLISIÓN O VUELCO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td colspan="1" style="text-align: center;"></td>
+    <td colspan="1" style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.colision_vuelco }}</td>
     <td style="text-align: center;">{{ solicitud.cotizacion.prima_colisionVuelco }}</td>
   </tr>
@@ -193,7 +193,7 @@
     <td colspan="3">COBERTURA F - INCENDIO Y RAYO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td style="text-align: center;"></td>
+    <td style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.incendio_rayo }}</td>
     <td colspan="1" style="text-align: center;">.00</td>
   </tr>
@@ -201,7 +201,7 @@
     <td colspan="3">COBERTURA G - ROBO O HURTO</td>
     <td colspan="1" style="text-align: center;"> </td>
     <td colspan="1" style="text-align: center;"> </td>
-    <td style="text-align: center;"></td>
+    <td style="text-align: center;">{{ conductor.valor }}</td>
     <td colspan="1" style="text-align: center;">{{ solicitud.cotizacion.robo_hurto }}</td>
     <td colspan="1" style="text-align: center;">.00</td>
   </tr>
