Detalle en PDF de pólizas.

--- a/cotizador_acerta/templates/polizas/emision_intermediario_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_intermediario_pdf.html
@@ -11,7 +11,7 @@
         width: 100%;
     }
 
-    table td {
+    td {
         border: 1px solid #dddddd;
         text-align: left;
         white-space: nowrap;
@@ -224,7 +224,7 @@
   </tr>
   {% endif %}
   <tr style="height: 40; ">
-    <td colspan="8"><br><br><br></td>
+    <td colspan="8"><br></td>
   </tr>
   <tr>
     <td colspan="4">EMISIÓN PÓLIZA NUEVA<br><br><br><br></td>
